some small changes

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -140,11 +140,11 @@
 	\item direkte Verbindungen
 	\item HTTP Nachrichten
 	\end{itemize}
-\item Gewerbliche Werbung
+\item Werbungen
 	\begin{itemize}
 	\item HTTP Nachrichten
 	\end{itemize}
-\item Sofortnachrichten, verschlüsselt
+\item Textnachrichten, verschlüsselt
 \end{itemize}
 \end{frame}
 
@@ -232,6 +232,14 @@
 \end{figure}
 \end{frame}
 
+\begin{frame}{Zusammenfassung}
+\begin{itemize}
+\item Nachrichten
+\item Join
+\item Suche
+\end{itemize}
+\end{frame}
+
 \section{Weiterführende Informationen}
 
 \begin{frame}{Probleme}
@@ -250,7 +258,7 @@
 
 \begin{frame}{Implementierungen}
 \begin{itemize}
-\item Kazaa
+\item Kazaa (Lite)
 \item Grokster
 \item Morpheus (ab 2002 gnutella)
 \item giFT (Open Source)
