--- a/ausarbeitung/bibliography.bib
+++ b/ausarbeitung/bibliography.bib
@@ -1,10 +1,126 @@
-@article{dijkstra1968letters,
-  title={Letters to the editor: go to statement considered harmful},
-  author={Dijkstra, Edsger W},
-  journal={Communications of the ACM},
-  volume={11},
-  number={3},
-  pages={147--148},
-  year={1968},
-  publisher={ACM}
+% This file was created with JabRef 2.10.
+% Encoding: UTF-8
+
+
+@TechReport{skypeAna,
+  Title                    = {An Analysis of the Skype Peer-to-Peer Internet Telephony 
+Protocol},
+  Author                   = {Salman A. Baset and Henning Schulzrinne},
+  Institution              = {Columbia University},
+  Year                     = {2004}
 }
+
+@Article{liang2006fasttrack,
+  Title                    = {The FastTrack overlay: A measurement study},
+  Author                   = {Liang, Jian and Kumar, Rakesh and Ross, Keith W},
+  Journal                  = {Computer Networks},
+  Year                     = {2006},
+  Number                   = {6},
+  Pages                    = {842--858},
+  Volume                   = {50},
+
+  Publisher                = {Elsevier}
+}
+
+@Article{morphvsKazaa,
+  Title                    = {Morpheus vs. Kazaa, The Next Generation},
+  Author                   = {Thomas Mennecke},
+  Journal                  = {http://www.slyck.com},
+  Year                     = {2006}
+}
+
+@Article{menneck2,
+  Title                    = {End of the Road for Overpeer},
+  Author                   = {Thomas Mennecke},
+  Journal                  = {slyck.com},
+  Year                     = {2005}
+}
+
+@Misc{grokster,
+  Title                    = {Grokster},
+  Month                    = {2015},
+  Note                     = {https://en.wikipedia.org/wiki/Grokster},
+
+  Url                      = {https://en.wikipedia.org/wiki/Grokster}
+}
+
+@Misc{kazaa,
+  Title                    = {Kazaa},
+  HowPublished             = {2015},
+  Note                     = {https://en.wikipedia.org/wiki/Kazaa},
+
+  Url                      = {https://en.wikipedia.org/wiki/Kazaa}
+}
+
+@Misc{fastTrack,
+  Title                    = {FastTrack},
+  Note                     = {https://en.wikipedia.org/wiki/FastTrack},
+  Year                     = {2015},
+
+  Url                      = {https://en.wikipedia.org/wiki/FastTrack}
+}
+
+@Misc{gift,
+  Title                    = {giFT},
+  Note                     = {http://sourceforge.net/projects/gift/},
+  Year                     = {2015},
+
+  Url                      = {http://sourceforge.net/projects/gift/}
+}
+
+@Misc{gnutella,
+  Title                    = {Gnutella},
+  Note                     = {https://en.wikipedia.org/wiki/Gnutella},
+  Year                     = {2015},
+
+  Url                      = {https://en.wikipedia.org/wiki/Gnutella}
+}
+
+@Misc{joltid,
+  Title                    = {Joltid},
+  Note                     = {http://joltid.com/},
+  Year                     = {2015},
+
+  Url                      = {http://joltid.com/}
+}
+
+@Misc{morpheus,
+  Title                    = {Morpheus},
+  Note                     = {https://en.wikipedia.org/wiki/Morpheus\textunderscore %28software%29},
+  Year                     = {2015},
+
+  Url                      = {https://en.wikipedia.org/wiki/Morpheus_%28software%29}
+}
+
+@Misc{sharmanN,
+  Title                    = {Sharman Networks},
+  Note                     = {https://en.wikipedia.org/wiki/Sharman\textunderscore Networks},
+  Year                     = {2015},
+
+  Url                      = {https://en.wikipedia.org/wiki/Sharman_Networks}
+}
+
+@Misc{kazaaLite,
+  Title                    = {Kazaa-Lite},
+  Note                     = {https://en.wikipedia.org/wiki/Kazaa\textunderscore Lite},
+  Year                     = {2013},
+
+  Url                      = {https://en.wikipedia.org/wiki/Kazaa_Lite}
+}
+
+@Misc{uuHash,
+  Title                    = {UUHash},
+  Note                     = {https://en.wikipedia.org/wiki/UUHash},
+  Year                     = {2013},
+
+  Url                      = {https://en.wikipedia.org/wiki/UUHash}
+}
+
+@Misc{caida,
+  Title                    = {Round-Trip Time Internet Measurements from CAIDA's Macroscopic Internet Topology Monitor},
+  HowPublished             = {ceida.org},
+  Year                     = {2001},
+
+  Url                      = {http://www.caida.org/research/performance/rtt/walrus0202/}
+}
+
