--- a/ausarbeitung/bibliography.bib
+++ b/ausarbeitung/bibliography.bib
@@ -86,7 +86,7 @@ Protocol},
 
 @Misc{morpheus,
   Title                    = {Morpheus},
-  Note                     = {https://en.wikipedia.org/wiki/Morpheus\textunderscore %28software%29},
+  Note                     = {https://en.wikipedia.org/wiki/Morpheus\textunderscore \%28software\%29},
   Year                     = {2015},
 
   Url                      = {https://en.wikipedia.org/wiki/Morpheus_%28software%29}
