--- a/ausarbeitung/text/abstract.tex
+++ b/ausarbeitung/text/abstract.tex
@@ -1,2 +1,2 @@
 FastTrack ist ein Peer-To-Peer Overlay Netzwerk und ist dafür entwickelt worden Daten auszutauschen. 
-In dieser Ausarbeitung wird das Netzwerk beschrieben, wie es aufgebaut ist, welche Nachrichten verschickt werden oder wie Daten gesucht und gefunden werden.
+In dieser Ausarbeitung werden die Funktionsweise des Protokoll beschrieben, wie es aufgebaut ist, welche Nachrichten verschickt werden oder wie Daten gesucht werden.
