--- a/ausarbeitung/text/allgemeineInfo.tex
+++ b/ausarbeitung/text/allgemeineInfo.tex
@@ -1,14 +1,17 @@
 In diesem Abschnitt werden die allgemeine Informationen von FastTrack dargestellt.
 Dann wird Teil \ref{subsec:netAuf} der Allgemeine Aufbau des Netzwerkes dargestellt. 
 Im Unterabschnitt \ref{subsec:proAuf} wird der Aufbau des Programm eines Knoten beschrieben.
+Der Aufbau des Netzwerkes und des Knoten Programms wurde aus dem Artikel \cite{liang2006fasttrack} genommen.
 
 \subsection{Netzwerk Aufbau}
 \label{subsec:netAuf}
 
 Das Netzwerk besteht aus Knoten die untereinander verbunden sind.
-Diese unterteilen sich in normale Knoten (ON) und SuperKnoten (SN).
+Diese unterteilen sich in normale Knoten (ON) und Superknoten (SN).
 Es ist ähnlich der Abbildung \ref{fig:auf} aufgebaut.
 Die ONs sind mit jeweils einen SN verbunden, welchen sie nach dem Betreten des Netzwerk wählen.
+Die SNs speichern dabei die Metainformationen seiner Knoten.
+Diese werden bei einer Suchanfrage der Knoten durchsucht durchsucht.
 Außerdem sind die SNs untereinander verbunden um Informationen auszutauschen und Suchanfragen weiterzuleiten.
 
 \begin{figure}
@@ -16,6 +19,13 @@ Außerdem sind die SNs untereinander verbunden um Informationen auszutauschen un
 \caption{Aufbau des FastTrack Netzwerkes (Quelle \cite{liang2006fasttrack})}
 \label{fig:auf}
 \end{figure}
+
+\subsubsection{Superknoten}
+
+Jeder Knoten im Netzwerk, kann ein SN werden.
+Die Wahl ob ein Knoten ein SN wird dabei beachtet wie die Knoten an  das Internet angebunden ist und wie leistungsstark der Knoten ist.
+Es ist wichtig, dass die Verbindung zum Internet schnell genug ist, da häufig Anfragen an die SN kommen können.
+Außerdem damit die Verarbeitung der Anfrage schnell gehen, sollte auch die Hardware  entsprechende Leistung besitzen.
 
 \subsection{Knoten Programm Aufbau}
 \label{subsec:proAuf}
