add small changes

--- a/ausarbeitung/bibliography.bib
+++ b/ausarbeitung/bibliography.bib
@@ -36,6 +36,16 @@ Protocol},
   Year                     = {2005}
 }
 
+@Article{veitinger2002,
+  Title                    = {"Overpeer": Angriff auf Musikfans},
+  Author                   = {Thomas Veitinger},
+  Journal                  = {Spiegel Online},
+  Year                     = {2002},
+
+  Owner                    = {lichtbringer},
+  Timestamp                = {2015.08.14}
+}
+
 @Misc{grokster,
   Title                    = {Grokster},
   Month                    = {2015},
@@ -82,6 +92,14 @@ Protocol},
   Year                     = {2015},
 
   Url                      = {http://joltid.com/}
+}
+
+@Misc{kazaagui,
+  Title                    = {Kazaa Preview},
+  Note                     = {http://p2pon.net/p2p-reviews/kazaa/},
+  Year                     = {2015},
+
+  Url                      = {http://p2pon.net/p2p-reviews/kazaa/}
 }
 
 @Misc{morpheus,
