--- a/ausarbeitung/text/abstract.tex
+++ b/ausarbeitung/text/abstract.tex
@@ -1,2 +1,3 @@
 FastTrack ist ein Peer-To-Peer Overlay Netzwerk und ist dafür entwickelt worden Daten auszutauschen. 
 In dieser Ausarbeitung werden die Funktionsweise des Protokoll beschrieben, wie es aufgebaut ist, welche Nachrichten verschickt werden oder wie Daten gesucht werden.
+Am Ende wird auf die Probleme von FastTrack und Implementierungen eingegangen.
