--- a/ausarbeitung/text/allgemeineInfo.tex
+++ b/ausarbeitung/text/allgemeineInfo.tex
@@ -25,12 +25,12 @@ Außerdem sind die SNs untereinander verbunden um Informationen auszutauschen un
 Jeder Knoten im Netzwerk, kann ein SN werden.
 Die Wahl ob ein Knoten ein SN wird dabei beachtet wie die Knoten an  das Internet angebunden ist und wie leistungsstark der Knoten ist.
 Es ist wichtig, dass die Verbindung zum Internet schnell genug ist, da häufig Anfragen an die SN kommen können.
-Außerdem damit die Verarbeitung der Anfrage schnell gehen, sollte auch die Hardware  entsprechende Leistung besitzen.
+Außerdem damit die Verarbeitung der Anfrage schnell gehen, sollte auch die Hardware der Knoten die entsprechende Leistung besitzen.
 
 \subsection{Knoten Programm Aufbau}
 \label{subsec:proAuf}
 
-Die offiziellen Klienten \textit{Kazaa}\cite{kazaa} sind nur für Windows vorhanden
+Die offiziellen Klienten \textit{Kazaa}\cite{kazaa} sind nur für Windows vorhanden.
 Er besteht aus vier Komponententeilen, die folgend vorgestellt werden:
 
 \begin{itemize}
@@ -42,7 +42,7 @@ Dieser enthält für jeden Knoten die IP, den Port, die Auslastung und eine Zeit
 Es wird der Name, die Größe, der ContentHash und die Beschreibung der Daten eingetragen.
 Diese werden zum Beispiel für die Suche verwendet, wenn die Metadaten zum SN gesendet wurden.
 \item[4.] \textbf{DAT-Dateien:} Diese Dateien enthalten die heruntergeladenen Daten.
-Wenn der Download abgeschlossen ist, werden die Endungen der Dateien umgewandelt.
+Wenn der Download abgeschlossen ist, werden die Endungen der Dateien in die originalen umgewandelt.
 \end{itemize}
 
 \begin{figure}
