--- a/ausarbeitung/text/allgemeineInfo.tex
+++ b/ausarbeitung/text/allgemeineInfo.tex
@@ -10,7 +10,7 @@ Das Netzwerk besteht aus Knoten die untereinander verbunden sind.
 Diese unterteilen sich in normale Knoten (ON) und Superknoten (SN).
 Es ist ähnlich der Abbildung \ref{fig:auf} aufgebaut.
 Die ONs sind mit jeweils einen SN verbunden, welchen sie nach dem Betreten des Netzwerk wählen.
-Die SNs speichern dabei die Metainformationen seiner Knoten.
+Die SNs speichert dabei die Metainformationen seiner Knoten.
 Diese werden bei einer Suchanfrage der Knoten durchsucht durchsucht.
 Außerdem sind die SNs untereinander verbunden um Informationen auszutauschen und Suchanfragen weiterzuleiten.
 
@@ -22,10 +22,10 @@ Außerdem sind die SNs untereinander verbunden um Informationen auszutauschen un
 
 \subsubsection{Superknoten}
 
-Jeder Knoten im Netzwerk, kann ein SN werden.
-Die Wahl ob ein Knoten ein SN wird dabei beachtet wie die Knoten an  das Internet angebunden ist und wie leistungsstark der Knoten ist.
-Es ist wichtig, dass die Verbindung zum Internet schnell genug ist, da häufig Anfragen an die SN kommen können.
-Außerdem damit die Verarbeitung der Anfrage schnell gehen, sollte auch die Hardware der Knoten die entsprechende Leistung besitzen.
+Jeder Knoten im Netzwerk hat die Möglichkeit ein SN werden.
+Bei der Wahl ob ein Knoten ein SN wird zum einem betrachtet wie die Knoten an das Internet angebunden ist und zum anderen wie leistungsstark der Knoten ist.
+Es ist wichtig, dass die Verbindung zum Internet schnell genug aber auch konstant ist, da häufig Anfragen an den SN kommen.
+Außerdem damit die Verarbeitung der Anfrage, je nach Menge, schnell gehen muss auch die Hardware der Knoten die entsprechende Leistung besitzen.
 
 \subsection{Knoten Programm Aufbau}
 \label{subsec:proAuf}
