small updates to Skype

--- a/ausarbeitung/bibliography.bib
+++ b/ausarbeitung/bibliography.bib
@@ -40,30 +40,12 @@ Protocol},
   Title                    = {"Overpeer": Angriff auf Musikfans},
   Author                   = {Thomas Veitinger},
   Journal                  = {Spiegel Online},
-  Year                     = {2002},
-
-  Owner                    = {lichtbringer},
-  Timestamp                = {2015.08.14}
-}
-
-@Misc{grokster,
-  Title                    = {Grokster},
-  Month                    = {2015},
-  Note                     = {https://en.wikipedia.org/wiki/Grokster},
-
-  Url                      = {https://en.wikipedia.org/wiki/Grokster}
-}
-
-@Misc{kazaa,
-  Title                    = {Kazaa},
-  HowPublished             = {2015},
-  Note                     = {https://en.wikipedia.org/wiki/Kazaa},
-
-  Url                      = {https://en.wikipedia.org/wiki/Kazaa}
+  Year                     = {2002}
 }
 
 @Misc{fastTrack,
   Title                    = {FastTrack},
+  Month                    = {August},
   Note                     = {https://en.wikipedia.org/wiki/FastTrack},
   Year                     = {2015},
 
@@ -72,6 +54,7 @@ Protocol},
 
 @Misc{gift,
   Title                    = {giFT},
+  Month                    = {August},
   Note                     = {http://sourceforge.net/projects/gift/},
   Year                     = {2015},
 
@@ -80,30 +63,52 @@ Protocol},
 
 @Misc{gnutella,
   Title                    = {Gnutella},
+  Month                    = {August},
   Note                     = {https://en.wikipedia.org/wiki/Gnutella},
   Year                     = {2015},
 
   Url                      = {https://en.wikipedia.org/wiki/Gnutella}
 }
 
+@Misc{grokster,
+  Title                    = {Grokster},
+  Month                    = {August},
+  Note                     = {https://en.wikipedia.org/wiki/Grokster},
+  Year                     = {2015},
+
+  Url                      = {https://en.wikipedia.org/wiki/Grokster}
+}
+
 @Misc{joltid,
   Title                    = {Joltid},
+  Month                    = {August},
   Note                     = {http://joltid.com/},
   Year                     = {2015},
 
   Url                      = {http://joltid.com/}
 }
 
-@Misc{kazaagui,
-  Title                    = {Kazaa Preview},
-  Note                     = {http://p2pon.net/p2p-reviews/kazaa/},
+@Misc{kazaa,
+  Title                    = {Kazaa},
+  Month                    = {August},
+  Note                     = {https://en.wikipedia.org/wiki/Kazaa},
   Year                     = {2015},
 
-  Url                      = {http://p2pon.net/p2p-reviews/kazaa/}
+  Url                      = {https://en.wikipedia.org/wiki/Kazaa}
+}
+
+@Misc{kazaaLite,
+  Title                    = {Kazaa-Lite},
+  Month                    = {August},
+  Note                     = {https://en.wikipedia.org/wiki/Kazaa\textunderscore Lite},
+  Year                     = {2015},
+
+  Url                      = {https://en.wikipedia.org/wiki/Kazaa_Lite}
 }
 
 @Misc{morpheus,
   Title                    = {Morpheus},
+  Month                    = {August},
   Note                     = {https://en.wikipedia.org/wiki/Morpheus\textunderscore \%28software\%29},
   Year                     = {2015},
 
@@ -112,31 +117,44 @@ Protocol},
 
 @Misc{sharmanN,
   Title                    = {Sharman Networks},
+  Month                    = {August},
   Note                     = {https://en.wikipedia.org/wiki/Sharman\textunderscore Networks},
   Year                     = {2015},
 
   Url                      = {https://en.wikipedia.org/wiki/Sharman_Networks}
 }
 
-@Misc{kazaaLite,
-  Title                    = {Kazaa-Lite},
-  Note                     = {https://en.wikipedia.org/wiki/Kazaa\textunderscore Lite},
-  Year                     = {2013},
+@Misc{skypep2p,
+  Title                    = {What are P2P communications?},
+  HowPublished             = {support.skype.com},
+  Month                    = {August},
+  Note                     = {https://support.skype.com/en/faq/FA10983/what-are-p2p-communications},
+  Year                     = {2015},
 
-  Url                      = {https://en.wikipedia.org/wiki/Kazaa_Lite}
+  Url                      = {https://support.skype.com/en/faq/FA10983/what-are-p2p-communications}
 }
 
 @Misc{uuHash,
   Title                    = {UUHash},
+  Month                    = {August},
   Note                     = {https://en.wikipedia.org/wiki/UUHash},
-  Year                     = {2013},
+  Year                     = {2015},
 
   Url                      = {https://en.wikipedia.org/wiki/UUHash}
 }
 
+@Misc{kazaagui,
+  Title                    = {Kazaa Preview},
+  Month                    = {Dezember},
+  Note                     = {http://p2pon.net/p2p-reviews/kazaa/},
+  Year                     = {2012},
+
+  Url                      = {http://p2pon.net/p2p-reviews/kazaa/}
+}
+
 @Misc{caida,
   Title                    = {Round-Trip Time Internet Measurements from CAIDA's Macroscopic Internet Topology Monitor},
-  HowPublished             = {ceida.org},
+  Note                     = {http://www.caida.org/research/performance/rtt/walrus0202/},
   Year                     = {2001},
 
   Url                      = {http://www.caida.org/research/performance/rtt/walrus0202/}
